--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
           <a href="./sobre/sobre.html">SOBRE</a>
         </li>
         <li>
-          <a href="/produtos/produtos.html">PRODUTOS</a>
+          <a href="./produtos/produtos.html">PRODUTOS</a>
         </li>
         <li>
-          <a href="/portfolio/portfolio.html">PORTFÓLIO</a>
+          <a href="./portfolio/portfolio.html">PORTFÓLIO</a>
         </li>
         <li>
-          <a href="/contato/contato.html">CONTATO</a>
+          <a href="./contato/contato.html">CONTATO</a>
         </li>
       </ul>
     </nav>
