--- a/sobre/sobre.html
+++ b/sobre/sobre.html
@@ -22,13 +22,13 @@
               <a class="active" href="./sobre.html" aria-current="page">SOBRE</a>
             </li>
             <li>
-              <a href="/produtos/produtos.html">PRODUTOS</a>
+              <a href="../produtos/produtos.html">PRODUTOS</a>
             </li>
             <li>
-              <a href="/portfolio/portfolio.html">PORTFÓLIO</a>
+              <a href="../portfolio/portfolio.html">PORTFÓLIO</a>
             </li>
             <li>
-              <a href="/contato/contato.html">CONTATO</a>
+              <a href="../contato/contato.html">CONTATO</a>
             </li>
           </ul>
         </div>
