--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <cite>WILLIAM MORRIS</cite>
       </blockquote>
       <div class="pbutton3">
-        <a href="/produtos/produtos.html" class="btn">ORÇAMENTO</a>
+        <a href="../produtos/produtos.html" class="btn">ORÇAMENTO</a>
       </div>
     </div>
   </section>
@@ -79,7 +79,7 @@
       </ul>
       <div class="pbutton">
         <p>clique aqui e veja os detalhes dos produtos</p>
-        <a href="/produtos/produtos.html" class="btn">PRODUTOS</a>
+        <a href="../produtos/produtos.html" class="btn">PRODUTOS</a>
       </div>
     </div>
   </section>
@@ -98,7 +98,7 @@
     </ul>
     <div class="portdiv">
       <p>conheça mais sobre o nosso portfólio</p>
-      <a href="/portfolio/portfolio.html">PORTFÓLIO</a>
+      <a href="../portfolio/portfolio.html">PORTFÓLIO</a>
     </div>
   </section>
   <section class="qualidade container">
@@ -129,7 +129,7 @@
     </ul>
     <div class="pbutton2">
       <p>conheça mais a nossa história</p>
-      <a href="/sobre/sobre.html">SOBRE</a>
+      <a href="../sobre/sobre.html">SOBRE</a>
     </div>
   </section>
   <div class="break">
