--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
     </ul>
     <div class="pbutton2">
       <p>conheça mais a nossa história</p>
-      <a href="../sobre/sobre.html">SOBRE</a>
+      <a href="./sobre/sobre.html">SOBRE</a>
     </div>
   </section>
   <div class="break">
